package classes;

public abstract class FacultyMember {

}
