package classes;

public class GuestProfessor extends FacultyMember {

}
