package classes;

public class Lecturer extends FacultyMember {

}
