package classes;

public class Presentation extends Exam {

}
