package classes;

public class TeacherForSpecialTasks extends FacultyMember {

}
