public enum ExamType {
    SINGLE_PROFESSOR,
    DOUBLE_PROFESSOR
}
