
public enum StudyMode {
    FULL_TIME,
    PART_TIME
}
